k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: heart-api-service
  labels:
    app: heart-api
  annotations:
    prometheus.io/scrape: "true"
    prometheus.io/port: "80"
    prometheus.io/path: "/metrics"
spec:
  type: NodePort
  selector:
    app: heart-api
  ports:
    - protocol: TCP
      name: http
      port: 80
      targetPort: 8000
      nodePort: 32037
